--- a/index.html
+++ b/index.html
@@ -8,13 +8,160 @@
     <meta name="author" content="Ibe Uche Helping Hand Foundation">
     <title>Ibe Uche Helping Hand Foundation | Zero Hunger NGO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <style>
+        /* Custom Styles */
+        body {
+            font-family: 'Poppins', sans-serif;
+            color: #333;
+            margin: 0;
+            background-color: #f8f9fa;
+        }
+
+        .navbar {
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background-color: #ffffff;
+        }
+
+        .navbar-brand {
+            color: #28a745 !important;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+        }
+
+        .navbar-brand img {
+            height: 40px;
+            margin-right: 10px;
+        }
+
+        .nav-link {
+            color: #28a745 !important;
+        }
+
+        .nav-link:hover {
+            color: #218838 !important;
+            transition: color 0.3s ease;
+        }
+
+        .hero {
+            background: url('https://source.unsplash.com/1500x600/?nigeria,farming') no-repeat center center/cover;
+            padding: 120px 0;
+            background-color: #28a745;
+            text-align: center;
+            color: #ffffff;
+        }
+
+        .hero img {
+            display: none;
+        }
+
+        .btn-primary {
+            background-color: #28a745;
+            border-color: #28a745;
+            padding: 12px 24px;
+            font-size: 1.1rem;
+            transition: transform 0.2s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: #218838;
+            border-color: #1e7e34;
+            transform: scale(1.05);
+        }
+
+        .btn-success {
+            background-color: #ffffff;
+            color: #28a745;
+            border-color: #28a745;
+        }
+
+        .btn-success:hover {
+            background-color: #f8f9fa;
+            color: #218838;
+        }
+
+        h1, h2, h3 {
+            color: #28a745;
+        }
+
+        section {
+            padding: 60px 0;
+            border-top: 1px solid #dee2e6;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.5s ease, transform 0.5s ease;
+            background-color: #ffffff;
+        }
+
+        section.visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        #preloader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #ffffff;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            z-index: 9999;
+        }
+
+        .gallery img, .about-img, .testimonial-img {
+            width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-bottom: 15px;
+        }
+
+        footer {
+            background: #28a745;
+            color: #ffffff;
+            padding: 20px 0;
+        }
+
+        footer img {
+            height: 30px;
+            margin-left: 10px;
+        }
+
+        /* Responsive Adjustments */
+        @media (max-width: 768px) {
+            .hero h1 {
+                font-size: 2rem;
+            }
+            .hero p {
+                font-size: 1rem;
+            }
+            .btn-primary {
+                padding: 10px 20px;
+                font-size: 1rem;
+            }
+            .navbar-brand img {
+                height: 30px;
+            }
+        }
+    </style>
 </head>
 <body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <i class="fas fa-spinner fa-spin fa-3x" style="color: #28a745;"></i>
+    </div>
+
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Ibe Uche Helping Hand</a>
+            <a class="navbar-brand" href="#">
+                <img src="https://via.placeholder.com/100x40?text=Logo" alt="Ibe Uche Helping Hand Foundation Logo" loading="lazy">
+                Ibe Uche Helping Hand
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -25,15 +172,23 @@
                     <li class="nav-item"><a class="nav-link" href="#support">Support Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="#donate">Donate</a></li>
                     <li class="nav-item"><a class="nav-link" href="#volunteer">Volunteer</a></li>
+                    <li class="nav-item"><a class="nav-item"><a class="nav-link" href="#gallery">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                    <li class="nav-item">
+                        <select id="languageToggle" class="form-select w-auto">
+                            <option value="en">English</option>
+                            <option value="ig">Igbo</option>
+                        </select>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="hero text-center text-white">
+    <section id="home" class="hero">
         <div class="container">
+            <img src="https://source.unsplash.com/1500x600/?nigeria,farming" alt="Farmers working in Imo State" loading="lazy">
             <h1>Ibe Uche Helping Hand Foundation</h1>
             <p>Working towards SDG 2: Zero Hunger in Imo State, Nigeria</p>
             <a href="#donate" class="btn btn-primary btn-lg">Donate Now</a>
@@ -42,15 +197,17 @@
 
     <!-- About Section -->
     <section id="about" class="py-5">
+        <div  id="about" class="py-5">
         <div class="container">
             <h2 class="text-center">About Us</h2>
             <p class="lead text-center">Ibe Uche Helping Hand Foundation is dedicated to eradicating hunger in Imo State, Nigeria, aligning with SDG 2. We provide food aid, promote sustainable agriculture, and empower communities.</p>
             <div class="row">
                 <div class="col-md-6">
-                    <h3>Our Mission</h3>
-                    <p>To ensure no one in Imo State goes to bed hungry by providing food, education, and sustainable farming solutions.</p>
+                    <img src="https://via.placeholder.com/400x300?text=Community+Event" alt="Community food distribution in Imo State" class="about-img" loading="lazy">
                 </div>
                 <div class="col-md-6">
+                    <h3>Our Mission</h3>
+                    <p>To ensure no one in Imo State goes to bed hungry by providing food, education, and sustainable farming solutions.</p>
                     <h3>Our Vision</h3>
                     <p>A hunger-free Imo State where every individual has access to nutritious food.</p>
                 </div>
@@ -65,14 +222,17 @@
             <p class="text-center">Your support can make a difference in the fight against hunger.</p>
             <div class="row">
                 <div class="col-md-4">
+                    <i class="fas fa-bullhorn fa-2x mb-3"></i>
                     <h4>Advocate</h4>
                     <p>Raise awareness about hunger issues in Imo State through social media and community events.</p>
                 </div>
                 <div class="col-md-4">
+                    <i class="fas fa-handshake fa-2x mb-3"></i>
                     <h4>Partner</h4>
                     <p>Collaborate with us as a corporate or community partner to amplify our impact.</p>
                 </div>
                 <div class="col-md-4">
+                    <i class="fas fa-donate fa-2x mb-3"></i>
                     <h4>Fundraise</h4>
                     <p>Organize events or campaigns to raise funds for our programs.</p>
                 </div>
@@ -128,6 +288,76 @@
         </div>
     </section>
 
+    <!-- Gallery Section -->
+    <section id="gallery" class="py-5">
+        <div class="container">
+            <h2 class="text-center">Our Work in Action</h2>
+            <p class="text-center">See the impact of our programs in Imo State.</p>
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/400x300?text=Food+Distribution" alt="Food distribution event in Imo State" class="gallery-img" loading="lazy">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/400x300?text=Farming+Training" alt="Sustainable farming training session" class="gallery-img" loading="lazy">
+                </div>
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/400x300?text=Community+Outreach" alt="Community outreach program" class="gallery-img" loading="lazy">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Testimonials Section -->
+    <section id="testimonials" class="py-5 bg-light">
+        <div class="container">
+            <h2 class="text-center">What People Say</h2>
+            <div id="testimonialCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="https://via.placeholder.com/100?text=Chioma" alt="Chioma, a beneficiary" class="testimonial-img rounded-circle mx-auto d-block" style="width: 80px; height: 80px;">
+                        <p class="text-center">"This foundation fed my family during tough times. God bless you!"</p>
+                        <p class="text-center fw - fw-bold">— Chioma, Owerri</p>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="https://via.placeholder.com/100?text=Emeka" alt="Emeka, a volunteer" class="testimonial-img rounded-circle mx-auto d-block" style="width: 80px; height: 80px;">
+                        <p class="text-center">"Volunteering here changed my perspective on community service."</p>
+                        <p class="text-center fw-bold">— Emeka, Orlu</p>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon"></span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#testimonialCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon"></span>
+                </button>
+            </div>
+        </div>
+    </section>
+
+    <!-- Impact Section -->
+    <section id="impact" class="py-5">
+        <div class="container text-center">
+            <h2>Our Impact</h2>
+            <div class="row">
+                <div class="col-md-4">
+                    <i class="fas fa-utensils fa-3x mb-3"></i>
+                    <h4>10,000+</h4>
+                    <p>Meals Distributed</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="fas fa-tractor fa-3x mb-3"></i>
+                    <h4>500　　　</h4>
+                    <p>Farmers Trained</p>
+                </div>
+                <div class="col-md-4">
+                    <i class="fas fa-hand-holding-heart fa-3x mb-3"></i>
+                    <h4>200+</h4>
+                    <p>Volunteers Engaged</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="py-5">
         <div class="container">
@@ -163,11 +393,50 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2025 Ibe Uche Helping Hand Foundation. All rights reserved.</p>
+    <footer class="text-center py-3">
+        <p>© 2025 Ibe Uche Helping Hand Foundation. All qc reserved.
+            <img src="https://via.placeholder.com/100x40?text=Logo" alt="Ibe Uche Helping Hand Foundation Logo" loading="lazy">
+        </p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="scripts.js"></script>
+    <script>
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Fade-in sections on scroll
+        window.addEventListener('scroll', () => {
+            document.querySelectorAll('section').forEach(section => {
+                const rect = section.getBoundingClientRect();
+                if (rect.top < window.innerHeight * 0.8) {
+                    section.classList.add('visible');
+                }
+            });
+        });
+
+        // Language Toggle
+        document.getElementById('languageToggle').addEventListener('change', (e) => {
+            const lang = e.target.value;
+            if (lang === 'ig') {
+                document.querySelector('#donate h2').textContent = 'Nye Aka';
+                document.querySelector('#volunteer h2').textContent = 'Soro';
+            } else {
+                document.querySelector('#donate h2').textContent = 'Donate';
+                document.querySelector('#volunteer h2').textContent = 'Volunteer';
+            }
+        });
+
+        // Hide Preloader
+        window.addEventListener('load', () => {
+            document.getElementById('preloader').style.display = 'none';
+        });
+    </script>
 </body>
 </html>
